user edit history host is now configured

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,11 @@ dotnet_diagnostic.CA1848.severity = none
 # CA1812: We remove this since we mainly use dependency injection,
 # so a lot of classes might seem that they have not been instantiated.
 dotnet_diagnostic.CA1812.severity = none
+
+# CA2326: Deserializing JSON when using a TypeNameHandling value other than None can be insecure.
+# We always use interal data, so no user values er ever passed, therefore it is safe.
+dotnet_diagnostic.CA2326.severity = none
+
+# CA2327: When deserializing untrusted input, allowing arbitrary types to be deserialized is insecure
+# We always use interal data, so no user values er ever passed, therefore it is safe.
+dotnet_diagnostic.CA2327.severity = none
