--- a/src/OpenFTTH.UserEditHistory/OpenFTTH.UserEditHistory.csproj
+++ b/src/OpenFTTH.UserEditHistory/OpenFTTH.UserEditHistory.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="npgsql" Version="5.0.10" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OpenFTTH.Events" Version="3.2.0" />
